--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,9 @@ body {
   background: #ffe;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
   margin: 100px auto 0;
-  max-width: 400px;
-  min-height: 300px;
-  padding: 150px;
+  max-width: 800px; /*400px;*/
+  min-height: 600px; /*300px;*/
+  padding: 100px; /*200px;*/
   position: relative;
   width: 80%;
 }
@@ -27,17 +27,17 @@ body {
 .container:before {
   background: #ffe;
   box-shadow: 0 0 8px rgba(0,0,0,0.5);
-  left: -5px;
-  top: 4px;
-  transform: rotate(-2.5deg);
+  left: -5px;/*-5px;*/ 
+  top: 4px;/*4px;*/
+  transform: rotate(-2.5deg); /*-2.5deg*/
 }
 
 .container:after {
   background: #ffe;
   box-shadow: 0 0 3px rgba(0,0,0,0.5);
-  right: -3px;
-  top: 1px;
-  transform: rotate(1.4deg);
+  right: -3px;/*-3px;*/
+  top: 1px;/*1px;*/
+  transform: rotate(1.4deg); /*1.4deg*/
 }
 
 /* links */
