--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
 .container:before {
   background: #ffe;
   box-shadow: 0 0 8px rgba(0,0,0,0.5);
-  left: -5px;/*-5px;*/ 
+  left: -5px;/*-5px;*/
   top: 4px;/*4px;*/
   transform: rotate(-2.5deg); /*-2.5deg*/
 }
@@ -57,6 +57,10 @@ a.page-link:hover {
 
 .navlist {
   padding: 0px 0px;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .navlist > li {
@@ -142,7 +146,7 @@ footer {
 }
 
 .clean {
-  clear: both; 
+  clear: both;
 }
 
 .clean:after {
