--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="site-footer">
-<a href="https://maritlarsen.ml/">Marit Larsen China</a> | <a href="http://creativecommons.org/licenses/by/3.0/">Some Right Reserved</a>
+<a href="https://maritlarsen.ml/">Marit Larsen China</a>&nbsp;&bull;&nbsp;<a href="http://creativecommons.org/licenses/by/3.0/">Some Right Reserved</a>
 </footer>
