--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="site-footer">
 <hr />
-<a href="https://maritlarsen.ml/">Marit Larsen China</a>&nbsp;&bull;&nbsp;<a href="http://creativecommons.org/licenses/by/3.0/">Some Rights Reserved</a>
+<a href="https://maritlarsen.ml/" target="_blank">Marit Larsen China</a>&nbsp;&bull;&nbsp;<a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Some Rights Reserved(CC BY-SA 4.0)</a>
 </footer>
