--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="header">
     <h1>
-        <a style="color: #000;" href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <a class="title" href="{{ site.baseurl }}/">{{ site.title }}</a>
     </h1>
     <p class="sub">
         {{ site.description }}
@@ -8,10 +8,10 @@
 
     <div class="menu">
         <ul class="navlist">
-        <a title="Home" href="/"><img src="/images/home.png" width="14px"></a> 
-            {% for link in site.links %}
+        <li><a title="Home" href="/"><img src="/images/home.png" width="14px"></a>
+            {% for link in site.links %}</li>
             <li>
-                &bull;&nbsp;<a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                &bull;<a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
             </li>
             {% endfor %}
         </ul>
