--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
         <li><a title="Home" href="/"><img src="/images/home.png" width="14px"></a>
             {% for link in site.links %}</li>
             <li>
-                &bull;<a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                &bull;&nbsp;<a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
             </li>
             {% endfor %}
         </ul>
