--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Droid Sans Mono', monospace;
+  font-family: 'Droid Sans Mono', "Lucida Console", Monaco, monospace;
   line-height:150%;
   margin: 80px 0px;
   background: url("../images/bg.png")
@@ -169,7 +169,7 @@ footer {
 }
 
 .post-content {
-  font-family: 'Lato';
+  font-family: "Lato",sans-serif;
   font-size: 120%;
   font-weight: 300;
   line-height: 1.625;
@@ -177,6 +177,7 @@ footer {
 
 .post-content > p {
   display: block;
+  color: #333;
   -webkit-margin-before: 1em;
   -webkit-margin-after: 1em;
   -webkit-margin-start: 0px;
