add songid variable

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
   <!-- <p class="meta">{{ page.date | date: "%b %-d, %Y" }}</p> -->
 
   <article class="post-content">
+  <p class="songid" id="{{ page.songid }}"></p>
   {{ content }}
   </article>
 
