jquery music player fix

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,10 +30,10 @@ layout: default
 				// draw a div that floats right
 				$("article.post-content").before(div_float_right);
 				$("article.post-content").after("<div class\=\"clean\"></div>");
-			};
+			}
 			else {
-				$(.webplayer).hide();
-			};
+				$(".webplayer").hide()
+			}
 		};
 });
 </script>
